--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "remove": "rm -r ./compilations/*"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +13,11 @@
   "description": "",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
-    "fastify": "^4.28.1"
+    "dotenv": "^16.4.7",
+    "fastify": "^4.29.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.11",
+    "@types/node": "^20.17.12",
     "typescript": "5.6.0-dev.20240730"
   },
   "type": "module"
