--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,20 +10,22 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.7.7",
+    "@types/d3": "^7.4.3",
+    "axios": "^1.7.9",
     "d3": "^7.9.0",
-    "element-plus": "^2.8.4",
+    "d3-dag": "^1.1.0",
+    "element-plus": "^2.9.3",
     "monaco-editor": "^0.50.0",
-    "pinia": "^2.2.2",
-    "vue": "^3.5.10"
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.8",
-    "vue-tsc": "^2.1.6"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "vite": "^5.4.11",
+    "vue-tsc": "^2.2.0"
   }
 }
